--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ footer a{
 
 <header>
 <img src="https://raw.githubusercontent.com/assertexpress/assertexpress.github.io/main/assert-removebg-preview%20(3).png">
-<h1>ASSERT EXPRESS – Serviços Regulatórios</h1>
+<h1>ASSERT EXPRESS® – Serviços Regulatórios</h1>
 <p>Especialistas na criação, atualização e regularização do CNES em todo o Brasil.</p>
 <a class="btn" href="https://wa.me/5561999947526">Fale no WhatsApp</a>
 </header>
@@ -255,6 +255,7 @@ footer a{
 <div class="service-item">Inclusão e atualização de profissionais</div>
 <div class="service-item">Adequação de serviços e especialidades</div>
 <div class="service-item">Assessoria técnica especializada</div>
+<div class="service-item">Regularização</div>
 </div>
 </div>
 
@@ -264,7 +265,7 @@ footer a{
 <li>Contato inicial via WhatsApp, e-mail ou Instagram</li>
 <li>Análise da situação cadastral</li>
 <li>Orientação e solicitação de documentos</li>
-<li>Execução da criação ou atualização</li>
+<li>Execução da criação, atualização e regularização</li>
 <li>Entrega do CNES regularizado</li>
 </ol>
 </div>
@@ -272,7 +273,7 @@ footer a{
 </section>
 
 <footer>
-<p>ASSERT EXPRESS – Serviços Regulatórios®<br>Atendimento em todo o Brasil</p>
+<p>ASSERT EXPRESS® – Serviços Regulatórios<br>Todos os direitos reservados©</p>
 <p>
 <a href="mailto:assert.express@outlook.com">assert.express@outlook.com</a> |
 <a href="https://www.instagram.com/assert_express?igsh=M2k2ZXNhenc3aXlt" target="_blank">Instagram</a> |
