--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer a{
 <header>
 <img src="https://raw.githubusercontent.com/assertexpress/assertexpress.github.io/main/assert-removebg-preview%20(3).png">
 <h1>ASSERT EXPRESS® – Serviços Regulatórios</h1>
-<p>Especialistas na criação, atualização e regularização do CNES em todo o Brasil.</p>
+<p>Especialistas na criação, atualização e regularização do CNES em todo o Distrito Federal.</p>
 <a class="btn" href="https://wa.me/5561999947526">Fale no WhatsApp</a>
 </header>
 
@@ -221,7 +221,7 @@ footer a{
   <div class="card"><span>⚖️</span>Conformidade legal</div>
   <div class="card"><span>⚡</span>Agilidade</div>
   <div class="card"><span>🛡️</span>Segurança regulatória</div>
-  <div class="card"><span>📍</span>Atendimento nacional</div>
+  <div class="card"><span>📍</span>Atendimento em todo DF</div>
 </div>
 </section>
 
@@ -232,7 +232,7 @@ footer a{
 <p>O Cadastro Nacional de Estabelecimentos de Saúde (CNES) é obrigatório para o funcionamento legal de clínicas e consultórios.</p>
 <ul>
 <li>Participação em programas de financiamento e incentivos públicos;</li>
-<li>Credenciamento junto a operadoras de planos de saúde;</li>
+<li>Credenciamento junto a operadoras de PLANOS DE SAÚDE;</li>
 <li>Convênios com prefeituras e empresas da região.</li>
 </ul>
 </div>
